Closed
Bug 1827556
Opened 2 years ago
Closed 2 years ago
Fix non-unified-build bustage in dom/media/webrtc/jsapi/RTCRtpTransceiver.cpp
Categories
(Core :: WebRTC: Signaling, defect, P2)
Core
WebRTC: Signaling
Tracking
()
RESOLVED
FIXED
114 Branch
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox112 | --- | unaffected |
firefox113 | --- | unaffected |
firefox114 | --- | fixed |
People
(Reporter: janv, Assigned: janv)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
0:34.50 In file included from /Users/jvarga/Projects/Mozilla15/src/dom/media/webrtc/jsapi/RTCRtpTransceiver.cpp:5:
0:34.50 /Users/jvarga/Projects/Mozilla15/src/dom/media/webrtc/jsapi/RTCRtpTransceiver.h:165:56: error: use of undeclared identifier 'RTCStatsPromise'
0:34.50 void ChainToDomPromiseWithCodecStats(nsTArray<RefPtr<RTCStatsPromise>> aStats,
0:34.50 ^
0:34.50 /Users/jvarga/Projects/Mozilla15/src/dom/media/webrtc/jsapi/RTCRtpTransceiver.h:175:17: error: use of undeclared identifier 'RTCStatsPromise'
0:34.50 static RefPtr<RTCStatsPromise> ApplyCodecStats(
0:34.50 ^
0:34.50 /Users/jvarga/Projects/Mozilla15/src/dom/media/webrtc/jsapi/RTCRtpTransceiver.h:176:16: error: use of undeclared identifier 'RTCCodecStats'
0:34.50 nsTArray<RTCCodecStats> aCodecStats,
0:34.50 ^
0:34.50 /Users/jvarga/Projects/Mozilla15/src/dom/media/webrtc/jsapi/RTCRtpTransceiver.h:178:34: error: use of undeclared identifier 'RTCStatsPromise'
0:34.50 RefPtr<RTCStatsPromise::AllPromiseType>>>
0:34.50 ^
0:34.50 /Users/jvarga/Projects/Mozilla15/src/dom/media/webrtc/jsapi/RTCRtpTransceiver.cpp:879:25: error: out-of-line definition of 'ChainToDomPromiseWithCodecStats' does not match any declaration in 'mozilla::dom::RTCRtpTransceiver'
0:34.50 void RTCRtpTransceiver::ChainToDomPromiseWithCodecStats(
0:34.50 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
0:34.50 /Users/jvarga/Projects/Mozilla15/src/dom/media/webrtc/jsapi/RTCRtpTransceiver.cpp:914:44: error: out-of-line definition of 'ApplyCodecStats' does not match any declaration in 'mozilla::dom::RTCRtpTransceiver'
0:34.50 RefPtr<RTCStatsPromise> RTCRtpTransceiver::ApplyCodecStats(
0:34.50 ^~~~~~~~~~~~~~~
0:34.50 6 errors generated.
0:34.50 make[4]: *** [RTCRtpTransceiver.o] Error 1
Assignee | ||
Comment 1•2 years ago
|
||
Comment 2•2 years ago
|
||
Set release status flags based on info from the regressing bug 1822194
status-firefox112:
--- → unaffected
status-firefox113:
--- → unaffected
status-firefox114:
--- → affected
status-firefox-esr102:
--- → unaffected
Pushed by jvarga@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c5daf83b2b7b
Fix non-unified-build bustage in dom/media/webrtc/jsapi/RTCRtpTransceiver.cpp; r=pehrsons
Comment 5•2 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•