Bug 1827556 - Fix non-unified-build bustage in dom/media/webrtc/jsapi/RTCRtpTransceiver.cpp; r=pehrsons

Differential Revision: https://phabricator.services.mozilla.com/D175209